discussion/kv_engine/176643/176643_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52699: Check for an error when Magma-KVStore::scan loop ends

Both seq and id iterators lack a GetStatus check with the iterator
is no longer Valid. It could be that a critical error has occurred
causing the loop to end early.

No testing in this commit as there is no suitable framework for forcing
an error in magma.

Change-Id: I3c04c4695e825928994ffb923f6f1bbcb229d8d1

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-06-24 09:50:09.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-06-24 09:50:22.000000000
Message: 
Patch Set 1: Well-Formed-1

Branch restricted. PLEASE READ this URL: 

http://server.jenkins.couchbase.com/job/restricted-branch-check/303969/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-24 10:01:11.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/287/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1904:10: error: use of undeclared identifier "mctx" [clang-diagnostic-error]
    if (!mctx.itr->GetStatus().IsOK()) {
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1907:22: error: use of undeclared identifier "mctx" [clang-diagnostic-error]
                     mctx.itr->GetStatus().String());
                     ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/287/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1904:10:
error: use of undeclared identifier "mctx" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/287/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/283/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1904:10:
error: use of undeclared identifier "mctx"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/283/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/396/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc(1904): error C2065: "mctx": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/396/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/296/ : FAILURE

Compile error at [2022-06-24T09:52:57.300Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1904:10:
error: use of undeclared identifier "mctx"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/296/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/289/ : FAILURE

Compile error at [2022-06-24T09:55:27.276Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1904:10:
error: use of undeclared identifier "mctx"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/289/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/425/ : FAILURE

Compile error at [2022-06-24T09:52:57.148Z] /Users/couchbase/workspace/workspace/kv_engine.macos_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1904:10:
error: use of undeclared identifier "mctx"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/425/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/298/ : FAILURE

Compile error at [2022-06-24T09:56:11.142Z] /home/couchbase/jenkins/workspace/kv_engine.linux_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1904:10:
error: ?mctx? was not declared in this scope; did you mean ?ctx??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/298/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/285/ : FAILURE

Compile error at [2022-06-24T09:55:15.042Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1904:10:
error: ?mctx? was not declared in this scope; did you mean ?ctx??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/285/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/296/ : FAILURE

Compile error at [2022-06-24T09:56:30.191Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1904:10:
error: use of undeclared identifier "mctx"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/296/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17416/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/306/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
